--- a/docker-compose/traefik/config/traefik.yml
+++ b/docker-compose/traefik/config/traefik.yml
@@ -42,7 +42,7 @@ entryPoints:
 # certificatesResolvers:
 #   staging:
 #     acme:
-#       email: your-email@example.com
+#       email: cuelist@icloud.com
 #       storage: /etc/traefik/certs/acme.json
 #       caServer: "https://acme-staging-v02.api.letsencrypt.org/directory"
 #       httpChallenge:
