--- a/docker-compose/traefik/docker-compose.yml
+++ b/docker-compose/traefik/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     image: "traefik:v2.5"
     container_name: "traefik"
     ports:
-      - "80:80"
-      - "443:443"
-      # (Optional) Expose Dashboard
-      - "8080:8080"  # Don't do this in production!
-    volumes:
+      - "8080:80" #web
+      - "8081:8080" #dashboard
+      - "443:443" #secureweb
+      
+   volumes:
       - /etc/traefik:/etc/traefik
       - /var/run/docker.sock:/var/run/docker.sock:ro
